node-ports/juice/juice-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: juice-service
spec: 
  type: NodePort
  selector: 
    app: juice
  ports: 
    - port: 8084
      targetPort: 80
      nodePort: 30005
