node-ports/juice/juice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-ingress
spec:
  rules:
  - host: juice.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: juice-service
            port:
              number: 8084
